fix overflow for IE in quick replies list

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -1784,7 +1784,8 @@
 	min-width: 130px;
 	max-width: 220px;
 	max-height: 150px;
-	overflow: hidden auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 	scrollbar-width: thin;
 	border-radius: 4px;
 	font-size: 14px;
